--- a/webui/template/layout.html
+++ b/webui/template/layout.html
@@ -2,16 +2,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- - Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/conoha-iso.css" />
+
     <title>conoha-iso</title>
     <meta charset="utf-8">
 
     <script src="static/js/knockout.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout-validation/2.0.3/knockout.validation.min.js"></script>
     <script src="static/js/superagent.js"></script>
     <script src="static/js/conoha-iso.js"></script>
   </head>
   <body>
-    <h1>conoha-iso managemenet</h1>
-    {{.Body}}
+    <div class="container">
+      <h1>conoha-iso</h1>
+      <div class="row">
+        {{.Body}}
+      </div>
+    </div>
   </body>
 </html>
 {{end}}
